[package]
authors = ["David Chan <david@iridescent.io>"]
categories = ["command-line-utilities"]
description = "A (small) tool for computing statistics on XSV files."
homepage = "https://github.com/DavidMChan/ustat"
name = "ustat"
version = "0.1.0"
edition = "2018"

[dependencies]
argparse = "0.2.2"
regex = "1"
log = "0.4.14"

[[bin]]
name = "ustat"
path = "src/ustat.rs"
